; ModuleID = '/home/carl/AnghaBench/linux/arch/arm/mach-omap2/extr_cminst44xx.c_omap4_clkdm_allow_idle.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm/mach-omap2/extr_cminst44xx.c_omap4_clkdm_allow_idle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clockdomain = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.clockdomain*)* @omap4_clkdm_allow_idle to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @omap4_clkdm_allow_idle(%struct.clockdomain* %0) #0 {
  %2 = alloca %struct.clockdomain*, align 8
  store %struct.clockdomain* %0, %struct.clockdomain** %2, align 8
  %3 = load %struct.clockdomain*, %struct.clockdomain** %2, align 8
  %4 = getelementptr inbounds %struct.clockdomain, %struct.clockdomain* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.clockdomain*, %struct.clockdomain** %2, align 8
  %7 = getelementptr inbounds %struct.clockdomain, %struct.clockdomain* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.clockdomain*, %struct.clockdomain** %2, align 8
  %10 = getelementptr inbounds %struct.clockdomain, %struct.clockdomain* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @omap4_cminst_clkdm_enable_hwsup(i32 %5, i32 %8, i32 %11)
  ret void
}

declare dso_local i32 @omap4_cminst_clkdm_enable_hwsup(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
